# space-time-functions

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  yaml_spec.md
cmake/: yaml-cpp.cmake
doc/: yaml_spec.md
include/stf/: blend_function.h  common.h  explicit_form.h  interpolate_function.h  offset_function.h  space_time_function.h  stf.h  sweep_function.h  union_function.h  yaml_parser.h
include/stf/maths/: all.h  maths_2d.h  maths_3d.h
include/stf/primitives/: all.h  duchon.h  generic_function.h  implicit_ball.h  implicit_capsule.h  implicit_function.h  implicit_torus.h  implicit_union.h  vipss.h
include/stf/transforms/: all.h  compose.h  polybezier.h  polyline.h  rotation.h  scale.h  transform.h  translation.h
python/: pystf.cpp
python/space_time_functions/: __init__.py
python/tests/: conftest.py  test_base_classes.py  test_primitives.py  test_space_time_functions.py  test_transforms.py  test_yaml_parser.py
src/: yaml_parser.cpp
tests/: test_blend_function.cpp  test_interpolate_function.cpp  test_primitive.cpp  test_space_time_function.cpp  test_transform.cpp  test_yaml_parser.cpp
